[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Sample description"
authors = ["Dan Radenkovic <dan@radenkovic.org>"]
readme = "README.md"
# packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.2" 
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[tool.poetry.group.jupyter]
optional = true
[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
